--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,9 +45,9 @@ deploy:
   stage: deploy
   script:
     # Add Svn as remote
-    - echo "[svn-remote \"svn\"]\n" >> ./.git/config
-    - echo "\turl = http://$SVN_USERNAME:$SVN_PASSWORD@dev.jug.lt/svn/i11-gridinas.i11-gridinas.m/trunk/Biscord-Jeeves\n" >> ./.git/config
-    - echo "\tfetch = :refs/remotes/git-svn\n" >> ./.git/config
+    - printf "[svn-remote \"svn\"]\\n" >> ./.git/config
+    - printf "\turl = http://$SVN_USERNAME:$SVN_PASSWORD@dev.jug.lt/svn/i11-gridinas.i11-gridinas.m/trunk/Biscord-Jeeves\n" >> ./.git/config
+    - printf "\tfetch = :refs/remotes/git-svn\n" >> ./.git/config
     # merges master into svn master
     - git svn fetch svn
     - git checkout -b svn git-svn
