--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy:
   stage: deploy
   script:
     # Add Svn as remote
-    - apt-get -y update && apt-get install git-svn
+    - apt-get -y update && apt-get -y install git-svn
     - printf "[svn-remote \"svn\"]\\n" >> ./.git/config
     - printf "\\turl = http://$SVN_USERNAME:$SVN_PASSWORD@dev.jug.lt/svn/i11-gridinas.i11-gridinas.m/trunk/Biscord-Jeeves\\n" >> ./.git/config
     - printf "\\tfetch = :refs/remotes/git-svn\\n" >> ./.git/config
