--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,10 +47,10 @@ deploy:
     # Add Svn as remote
     - apt-get -y update && apt-get -y install git-svn
     - printf "[svn-remote \"svn\"]\\n" >> ./.git/config
-    - printf "\\turl = http://$SVN_USERNAME:$SVN_PASSWORD@dev.jug.lt/svn/i11-gridinas.i11-gridinas.m/trunk/Biscord-Jeeves\\n" >> ./.git/config
+    - printf "\\turl = http://dev.jug.lt/svn/i11-gridinas.i11-gridinas.m/trunk/Biscord-Jeeves\\n" >> ./.git/config
     - printf "\\tfetch = :refs/remotes/git-svn\\n" >> ./.git/config
     # merges master into svn master
-    - git svn fetch svn
+    - printf $SVN_PASSWORD | git svn fetch svn --username $SVN_USERNAME
     - git checkout -b svn git-svn
     - git merge master
     - git svn dcommit
