--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,11 +57,11 @@ deploy:
     - git config user.name $GIT_NAME
     - git config user.email $GIT_EMAIL
     - printf $GIT_PASSWORD | git checkout -b svn git-svn
-    - git merge -s ours master
+    - git reset --hard master
     - git svn dcommit
     # rebases svn master to git master and commits it
     - git checkout master
-    - git rebase svn
+    - git reset --hard svn
     - git branch -d svn
     - git svn dcommit
   only:
