deploys to heroku

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,6 @@ deploy-to-heroku:
     - apt-get update -yq && apt-get install -y ruby-dev
     - apt-get install -y rubygems
     - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_DEPLOYMENT_API_KEY
   only:
     - master
