--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ version '0.0.1-UNSTABLE'
 
 buildscript {
     ext.kotlin_version = '1.1.4-2'
-
+    ext.dokka_version = "0.9.15"
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -32,6 +34,7 @@ dependencies {
     compile "lt.saltyjuice.dragas:chatty-discord:0.4.3-SNAPSHOT"
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
+    compile "lt.saltyjuice.dragas.utility:kommander:0.1.1-SNAPSHOT"
     //compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -42,3 +45,6 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+apply from: "dokka.gradle"
+apply from: "jacoco.gradle"
