--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ build:
 test:
   stage: test
   script:
+    - ./gradlew -g /cache/.gradle check --info
     - chmod +x codecov
     - ./codecov
 
@@ -49,22 +50,8 @@ deploy-to-svn:
   script:
     # Add Svn as remote
     - chmod -x gradlew
-    - apt-get -y update && apt-get -y install git-svn
-    - printf "[svn-remote \"svn\"]\\n" >> ./.git/config
-    - printf "\\turl =$SVN_URL\\n" >> ./.git/config
-    - printf "\\tfetch = :refs/remotes/git-svn\\n" >> ./.git/config
-    # merges master into svn master
-    - printf $SVN_PASSWORD | git svn fetch svn --username $SVN_USERNAME
-    - git config user.name $GIT_NAME
-    - git config user.email $GIT_EMAIL
-    - printf $GIT_PASSWORD | git checkout -b svn git-svn
-    - git merge master --strategy-option theirs
-    - git svn dcommit
-    # rebases svn master to git master and commits it
-    - git checkout master
-    - git rebase svn
-    - git branch -d svn
-    - git svn dcommit
+    - chmod +x svndeployer
+    - ./svndeployer
   only:
     - master
 
