--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
     compile "lt.saltyjuice.dragas.utility:kommander:0.1.1-SNAPSHOT"
+    compile "lt.saltyjuice.dragas:khan4:1.0.0"
     //compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
