--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-group 'lt.saltyjuice.dragas'
-version '0.0.1-UNSTABLE'
 
 buildscript {
     ext.kotlin_version = '1.1.4-2'
@@ -14,10 +12,18 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+
+group 'lt.saltyjuice.dragas'
+version '0.0.1-UNSTABLE'
 mainClassName = "lt.saltyjuice.dragas.chatty.v3.biscord.MainKt"
+
 
 sourceCompatibility = 1.8
 
@@ -36,6 +42,7 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
     compile "lt.saltyjuice.dragas.utility:kommander:0.1.1-SNAPSHOT"
     compile "lt.saltyjuice.dragas:khan4:1.0.0"
+    compile 'org.postgresql:postgresql:42.1.4'
     //compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -49,3 +56,4 @@ compileTestKotlin {
 
 apply from: "dokka.gradle"
 apply from: "jacoco.gradle"
+apply from: "flyway.gradle"
