proper hibernate file

--- a/hibernate.gradle
+++ b/hibernate.gradle
@@ -7,11 +7,11 @@ List<String> userInfo = parsed.userInfo.split(":").toList()
 task prepareHibernate {
     File hibernateProperties = new File("src/main/resources/hibernate.properties")
     PrintWriter sout = new PrintWriter(hibernateProperties)
-    sout.println("hibernate.connection.driver_class = \"org.postgresql.Driver\"")
-    sout.println("hibernate.connection.url = \"$dbURL\"")
+    sout.println("hibernate.connection.driver_class = org.postgresql.Driver")
+    sout.println("hibernate.connection.url = $dbURL")
     if (userInfo[0] != null)
-        sout.println("hibernate.connection.username = \"${userInfo[0]}\"")
+        sout.println("hibernate.connection.username = ${userInfo[0]}")
     if (userInfo[1] != null)
-        sout.println("hibernate.connection.password = \"${userInfo[1]}\"")
+        sout.println("hibernate.connection.password = ${userInfo[1]}")
     sout.close()
 }
