refactors heroku deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,15 @@
 # https://github.com/gradle/gradle
 image: java:8
 
+services:
+  - postgres:latest
 # Disable the Gradle daemon for Continuous Integration servers as correctness
 # is usually a priority over speed in CI environments. Using a fresh
 # runtime for each build is more reliable since the runtime is completely
 # isolated from any previous builds.
 variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+    POSTGRES_DB:
 
 # Make the gradle wrapper executable. This essentially downloads a copy of
 # Gradle to build the project with.
@@ -60,9 +63,7 @@ deploy-to-heroku:
   environment:
     name: herokudeployment
   script:
-    - apt-get update -yq && apt-get install -y ruby-dev
-    - apt-get install -y rubygems
-    - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_DEPLOYMENT_API_KEY
+    - chmod +x herokudeployer
+    - ./herokudeployer
   only:
     - master
