--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'org.postgresql:postgresql:42.1.4'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
+    compile "com.vladmihalcea:hibernate-types-52:1.1.2"
     compile "lt.saltyjuice.dragas.utility:kommander:0.2-SNAPSHOT"
     compile "lt.saltyjuice.dragas:khan4:1.0.1"
     //compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
