--- a/hibernate.gradle
+++ b/hibernate.gradle
@@ -1,12 +1,12 @@
-String env = System.getenv("DATABASE_URL").replaceFirst("user", "Mantas")
-String dbURL = env.replaceFirst("postgres:", "postgresql:").replaceFirst("/\\w+:?\\w*@", "/")
-if(!dbURL.startsWith("jdbc:"))
-    dbURL = "jdbc:" + dbURL
-URI parsed = new URI(env.replaceFirst("jdbc:", ""))
-List<String> userInfo = parsed.userInfo.split(":").toList()
 
 
 task prepareHibernate {
+    String env = System.getenv("DATABASE_URL")
+    String dbURL = env.replaceFirst("postgres:", "postgresql:").replaceFirst("/\\w+:?\\w*@", "/")
+    if(!dbURL.startsWith("jdbc:"))
+        dbURL = "jdbc:" + dbURL
+    URI parsed = new URI(env.replaceFirst("jdbc:", ""))
+    List<String> userInfo = parsed.userInfo.split(":").toList()
     File hibernateProperties = new File("src/main/resources/hibernate.properties")
     PrintWriter sout = new PrintWriter(hibernateProperties)
     sout.println("hibernate.connection.driver_class = org.postgresql.Driver")
