--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile "lt.saltyjuice.dragas:chatty-discord:0.5.2-SNAPSHOT"
     compile 'org.postgresql:postgresql:42.1.4'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0
+    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '5.2.12.Final'
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     compile "com.vladmihalcea:hibernate-types-52:1.1.2"
     compile "lt.saltyjuice.dragas.utility:kommander:1.1.0"
