--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'lt.saltyjuice.dragas'
 version '0.0.1-UNSTABLE'
 
 buildscript {
-    ext.kotlin_version = '1.1.4-2'
+    ext.kotlin_version = '1.2.31'
     ext.dokka_version = "0.9.15"
     repositories {
         mavenCentral()
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "lt.saltyjuice.dragas:chatty-discord:0.5.2-SNAPSHOT"
     compile 'org.postgresql:postgresql:42.1.4'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
