--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ before_script:
     - chmod +x gradlew
 
 cache:
-    - /chache/.gradle
+    paths:
+    - /cache/.gradle
 
 # We redirect the gradle user home using -g so that it caches the
 # wrapper and dependencies.
