--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,9 @@ before_script:
 cache:
     paths:
     - /cache/.gradle
+    - ./.gradle/
+    - ./build/
+    - ./gradle-wrapper/
 
 # We redirect the gradle user home using -g so that it caches the
 # wrapper and dependencies.
