--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ variables:
 # https://docs.gradle.org/current/userguide/gradle_wrapper.html
 # It is expected that any modern gradle project has a wrapper
 before_script:
+    - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x gradlew
 
 cache:
